--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@pinia/nuxt": "^0.5.1",
+    "@vueuse/core": "^10.11.0",
     "nuxt": "^3.12.3",
     "vue": "latest"
   },
