--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@crazydos/nuxt-msw": "^0.2.0",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@pinia/nuxt": "^0.5.1",
     "@vueuse/core": "^10.11.0",
+    "msw": "^2.3.1",
     "nuxt": "^3.12.3",
     "vue": "latest"
   },
