--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vueuse/core": "^10.11.0",
     "msw": "^2.3.1",
     "nuxt": "^3.12.3",
+    "pinia": "^2.1.7",
     "vue": "latest"
   },
   "devDependencies": {
@@ -36,5 +37,8 @@
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "vitest": "^1.6.0"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
