--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "vitest",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "e2e": "playwright test",
+    "e2e:ui": "playwright test --ui"
   },
   "dependencies": {
     "@crazydos/nuxt-msw": "^0.2.0",
@@ -27,13 +29,14 @@
   "devDependencies": {
     "@nuxt/eslint-config": "^0.3.13",
     "@nuxt/test-utils": "^3.13.1",
+    "@pinia/testing": "^0.1.3",
+    "@playwright/test": "^1.45.1",
     "@vue/test-utils": "^2.4.6",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vitest": "^0.5.4",
     "jsdom": "^24.1.0",
-    "playwright-core": "^1.45.1",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "vitest": "^1.6.0"
